--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <!--second division-->
 
 
-      <section class="bg-dark text-center p-5 p-lg-0 pt-lg-5 text-light">
+      <section class="bg-dark text-center p-5 p-lg-0 pt-lg-5 text-light pb-0">
       <div  data-aos="zoom-in-up"  data-aos-duration="800" class="container" id="home-section">
-        <div class="d-sm-flex align-items-center justify-content-between pt-5 pb-4" >
+        <div class="d-sm-flex align-items-center justify-content-between pt-5 pb-5" >
             <div>
                 <h1>
                   µLearn <span  class="text-warning">CEP</span></h1>
@@ -58,7 +58,7 @@
                 </p>
                 <a target="_blank" href="https://app.mulearn.org/register"><button id="event-section"  class="btn btn-lg btn-primary">Join us! </button></a>
             </div>
-            <img class="w-50  d-none d-sm-block" src="img/showcase.svg" alt="" >
+            <img id="image" class=" d-none d-sm-block" src="img/showcase.svg" alt="" >
         </div>
       </div >
       </section >
