--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
       <!--events-->
       
       <section class="p-5" >
-        <div data-aos="fade-left"  data-aos-duration="800" class="container d-flex justify-content-between gap-4 flex-wrap">
-          <div id="event-card" class="card bg-dark text-light shadow " style="width: 18rem; height: 29rem; font-family: 'Poppins', sans-serif;
+        <div  class="container d-flex justify-content-between gap-4 flex-wrap">
+          <div data-aos="fade-left"  data-aos-duration="4500" id="event-card" class="card bg-dark text-light shadow " style="width: 18rem; height: 29rem; font-family: 'Poppins', sans-serif;
           font-family: 'Lato', sans-serif;">
             <img src="img/buildmyweb.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Build-my-web is a one month online and offline mode web development bootcamp, through this event participants learn to create websites using HTML,CSS, Bootstrap and Javascript.</p>
             </div>
           </div>
-          <div id="event-card" class="card bg-secondary text-light shadow" style="width: 18rem; height: 29rem; font-family: 'Poppins', sans-serif;
+          <div data-aos="fade-right"  data-aos-duration="4500" id="event-card" class="card bg-secondary text-light shadow" style="width: 18rem; height: 29rem; font-family: 'Poppins', sans-serif;
           font-family: 'Lato', sans-serif;">
             <img src="img/linked in.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">An online event on the topic LinkedIn profile building conducted in association with  CSI SB. </p>
             </div>
           </div>
-          <div id="event-card" class="card bg-dark text-light shadow " style="width: 18rem; height: 29rem; font-family: 'Poppins', sans-serif;
+          <div data-aos="fade-left"  data-aos-duration="4500"   id="event-card" class="card bg-dark text-light shadow " style="width: 18rem; height: 29rem; font-family: 'Poppins', sans-serif;
           font-family: 'Roboto Condensed', sans-serif;font-family: 'Lato', sans-serif;">
             <img src="img/capturetheflag.jpg" class="card-img-top" alt="...">
             <div class="card-body">
