Added onboarding steps

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                   At µLearn CEP, we're all about tech education through peer-to-peer collaboration. Join our community to learn, share, and grow in the world of technology. With diverse expertise, interactive workshops, and a vibrant network, we're your go-to hub for tech excellence. Join us and elevate your tech journey today!
                 </p>
-                <a target="_blank" href="https://app.mulearn.org/register"><button id="event-section"  class="btn btn-lg btn-primary">Join us! </button></a>
+                <a target="_blank" href="onboard.html"><button id="event-section"  class="btn btn-lg btn-primary">Join us! </button></a>
                 
             </div>
             
