--- a/onboard.html
+++ b/onboard.html
@@ -22,6 +22,7 @@
                     Abhijith Krishna:- 7306162307  <br>
                      </p>
                 <p>Do also join campus chapter whatsapp group and follow other social media platforms.</p>
+                <p>You can also refer to Youtube tutorial <a style="text-decoration: none;" href="https://youtu.be/3oV9smCyVV8?si=k4Q6vBxajpy6ihOr"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #ffffff;"></i></a></p>
                 
             </div>
             
@@ -101,7 +102,7 @@
 
 
 
-
+    <script src="https://kit.fontawesome.com/db709b2886.js" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 </body>
