--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </section >
 
       <!--events-->
-      <div class="container text-center" id="questions-section" data-aos="fade-down-right"  data-aos-duration="800" >
+      <div class="container text-center"  data-aos="fade-down-right"  data-aos-duration="800" >
         <h1 style="margin-top: 20px;" >EVENTS</h1></div>
       <section class="p-5" >
         <div  class="container d-flex justify-content-between gap-4 flex-wrap">
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div id="execom-section"></div>
-        <div class="container text-center" id="questions-section" data-aos="fade-down"  data-aos-duration="800" >
+        <div class="container text-center"  data-aos="fade-down"  data-aos-duration="800" >
           <button  onclick="window.location.href = 'upcoming.html';" class="glow-on-hover" type="button" style="margin-top: 50PX;">REGISTER FOR UPCOMING EVENTS</button>
       </section>
 
@@ -124,7 +124,7 @@
         <!--questions-->
 
         <section class="p-5" >
-          <div class="container text-center" id="questions-section" data-aos="fade-down-right"  data-aos-duration="800" >
+          <div class="container text-center"  data-aos="fade-down-right"  data-aos-duration="800" >
             <h1 >FAQ</h1>
             <div class="accordion accordion-flush" id="accordionFlushExample" id="question-section">
               <div class="accordion-item">
@@ -137,7 +137,7 @@
                   <div class="accordion-body">µLearn is a synergic philosophy of education, with a culture of mutual learning through micro peer groups. We are here to assist you in breaking through the echo chambers and free you from the shackles you have grounded yourself in. </div>
                 </div>
               </div>
-              <div   class="accordion-item">
+              <div id="questions-section"   class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingTwo">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                    How do i join this community?
@@ -174,13 +174,13 @@
 
         <!--Contact us-->
          <section class="p-5 bg-dark text-light text-center">
-          <div class="container" id="connect-section">
+          <div class="container" >
             <h2 >Connect with us!</h2> <br>
             <div class="d-flex justify-content-evenly ">
               <div>
                <a target="_blank" href="https://chat.whatsapp.com/Kxpc0rew7Va1k1jd3cbjAz"> <i class="fa-brands fa-whatsapp fa-2xl text-center" style="color: #ffffff;"></i></a>
               </div>
-              <div >
+              <div id="connect-section">
                <a target="_blank" href="https://instagram.com/mulearn_cep?igshid=MzRlODBiNWFlZA=="> <i class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"></i></a>
               </div>
               <div>
